--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(moveit_visualization_tools)
+project(moveit_visual_tools)
 
 find_package(Eigen REQUIRED)
 find_package(Boost REQUIRED thread system)
