--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package>
-  <name>moveit_visualization_tools</name>
+  <name>moveit_visual_tools</name>
   <version>0.0.1</version>
   <description>Helper functions for displaying and debugging MoveIt! data in Rviz via published markers</description>
 
@@ -8,9 +8,9 @@
 
   <license>BSD</license>
 
-  <url type="website">https://github.com/davetcoleman/moveit_visualization_tools</url>
-  <url type="butracker">https://github.com/davetcoleman/moveit_visualization_tools/issues</url>
-  <url type="repository">https://github.com/davetcoleman/moveit_visualization_tools/</url>
+  <url type="website">https://github.com/davetcoleman/moveit_visual_tools</url>
+  <url type="butracker">https://github.com/davetcoleman/moveit_visual_tools/issues</url>
+  <url type="repository">https://github.com/davetcoleman/moveit_visual_tools/</url>
 
   <author email="davetcoleman@gmail.com">Dave Coleman</author>
 
