--- a/package.xml
+++ b/package.xml
@@ -22,8 +22,10 @@
   <build_depend>roscpp</build_depend>
   <build_depend>tf_conversions</build_depend>
   <build_depend>visualization_msgs</build_depend>
+  <build_depend>graph_msgs</build_depend>
 
   <run_depend>geometry_msgs</run_depend>
   <run_depend>visualization_msgs</run_depend>
+  <run_depend>graph_msgs</run_depend>
 
 </package>
