--- a/package.xml
+++ b/package.xml
@@ -27,6 +27,7 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>moveit_msgs</build_depend>
   <build_depend>trajectory_msgs</build_depend>
+  <build_depend>cmake_modules</build_depend>
 
   <run_depend>moveit_ros_robot_interaction</run_depend>
   <run_depend>moveit_core</run_depend>
