Renamed to have 'MoveIt' prefix in class and file name, moved base functionality to rviz_visual_tools

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(moveit_visual_tools)
 
 # Load catkin and all dependencies required for this package
 find_package(catkin REQUIRED COMPONENTS
+  rviz_visual_tools
   eigen_conversions 
   geometry_msgs
   moveit_ros_robot_interaction 
@@ -24,6 +25,7 @@ catkin_package(
   LIBRARIES
     ${PROJECT_NAME}
   CATKIN_DEPENDS
+    rviz_visual_tools
     moveit_ros_robot_interaction
     moveit_core
     geometry_msgs
@@ -36,8 +38,7 @@ catkin_package(
 )
 
 # Enable gdb to show line numbers
-#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -g -W -Wall -Wno-unused-parameter -fno-strict-aliasing")
-#set(CMAKE_BUILD_TYPE Debug)
+#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -g -W -Wno-unused-parameter -fno-strict-aliasing")
 
 ## Build 
 
@@ -48,7 +49,7 @@ include_directories(
 
 # Visualization Tools Library
 add_library(${PROJECT_NAME}
-  src/visual_tools.cpp
+  src/moveit_visual_tools.cpp
 )
 
 add_dependencies(${PROJECT_NAME} graph_msgs_generate_messages_cpp)
@@ -58,8 +59,8 @@ target_link_libraries(${PROJECT_NAME}
 )
 
 # Test executable
-add_executable(visual_tools_test src/visual_tools_test.cpp)
-target_link_libraries(visual_tools_test 
+add_executable(moveit_visual_tools_test src/moveit_visual_tools_test.cpp)
+target_link_libraries(moveit_visual_tools_test 
   ${catkin_LIBRARIES} ${PROJECT_NAME}
 )
 
