--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,9 +51,7 @@ include_directories(
 add_library(${PROJECT_NAME}
   src/moveit_visual_tools.cpp
 )
-
 add_dependencies(${PROJECT_NAME} graph_msgs_generate_messages_cpp)
-
 target_link_libraries(${PROJECT_NAME}
   ${catkin_LIBRARIES} ${Boost_LIBRARIES}
 )
@@ -70,12 +68,21 @@ target_link_libraries(collision_objects_test
   ${catkin_LIBRARIES} ${PROJECT_NAME}
 )
 
-# Install
-install(TARGETS ${PROJECT_NAME} 
+## Install
+
+# Install libraries
+install(TARGETS ${PROJECT_NAME}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION})
 
-# Mark cpp header files for installation
-install(DIRECTORY include/${PROJECT_NAME}/
-  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-  FILES_MATCHING PATTERN "*.h"
-)
+# Install header files
+install(DIRECTORY include/$PROJECT_NAME}/   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
+
+# Install shared resources
+install(DIRECTORY launch    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
+install(DIRECTORY resources DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
+
+# Install executables
+install(TARGETS moveit_visual_tools_test collision_objects_test
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+
