--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,12 @@ script:
   - source /opt/ros/$CI_ROS_DISTRO/setup.bash
   - mkdir -p $CATKIN_WS_SRC
   - ln -s $TRAVIS_BUILD_DIR $CATKIN_WS_SRC
+  # moveit_visual_tools often breaks when an unreleased change in rviz_visual_tools occurs, so build that from
+  # source, too
+  - cd $CATKIN_WS_SRC
+  - git clone https://github.com/davetcoleman/rviz_visual_tools.git
+  - rosdep install --from-paths ./ -y --ignore-src --rosdistro $CI_ROS_DISTRO
+  # Create Catkin WS
   - cd $CATKIN_WS
   - catkin init
   # Enable install space
