--- a/.travis.yml
+++ b/.travis.yml
@@ -1,38 +1,32 @@
-sudo: required
+# while this doesn't require sudo we don't want to run within a Docker container
+sudo: true
 dist: trusty
-language: generic # Force travis to use its minimal image with default Python settings
-compiler:
-  - gcc
+language: python
+python:
+  - "3.4"
 env:
   global:
-    - CATKIN_WS=~/catkin_ws
-    - CATKIN_WS_SRC=${CATKIN_WS}/src
-    - CI_ROS_DISTRO="indigo"
+    - JOB_PATH=/tmp/devel_job
+  matrix:
+    - ROS_DISTRO_NAME=kinetic OS_NAME=ubuntu OS_CODE_NAME=xenial ARCH=amd64
 install:
-  - sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu trusty main" > /etc/apt/sources.list.d/ros-latest.list'
-  - wget http://packages.ros.org/ros.key -O - | sudo apt-key add -
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq -y python-rosdep python-catkin-tools
-  - sudo rosdep init
-  - rosdep update
-  # Use rosdep to install all dependencies (including ROS itself)
-  - rosdep install --from-paths ./ -i -y --rosdistro $CI_ROS_DISTRO
+  # either install the latest released version of ros_buildfarm
+  - pip install ros_buildfarm
+  # checkout catkin for catkin_test_results script
+  - git clone https://github.com/ros/catkin /tmp/catkin
+  # run devel job for a ROS repository with the same name as this repo
+  - export REPOSITORY_NAME=`basename $TRAVIS_BUILD_DIR`
+  # use the code already checked out by Travis
+  - mkdir -p $JOB_PATH/catkin_workspace/src
+  - cp -R $TRAVIS_BUILD_DIR $JOB_PATH/catkin_workspace/src/
+  # generate the script to run a devel job for that target and repo
+  - generate_devel_script.py https://raw.githubusercontent.com/ros-infrastructure/ros_buildfarm_config/production/index.yaml $ROS_DISTRO_NAME default $REPOSITORY_NAME $OS_NAME $OS_CODE_NAME $ARCH > $JOB_PATH/devel_job.sh
+  - cd $JOB_PATH
+  - cat devel_job.sh
+  # run the actual job which involves Docker
+  - sh devel_job.sh -y
 script:
-  - source /opt/ros/$CI_ROS_DISTRO/setup.bash
-  - mkdir -p $CATKIN_WS_SRC
-  - ln -s $TRAVIS_BUILD_DIR $CATKIN_WS_SRC
-  # build packages that often cause this package to break because of unreleased changes
-  - cd $CATKIN_WS_SRC
-  - git clone https://github.com/davetcoleman/rviz_visual_tools.git
-  - rosdep install --from-paths ./ -y --ignore-src --rosdistro $CI_ROS_DISTRO
-  # Create Catkin WS
-  - cd $CATKIN_WS
-  - catkin init
-  # Enable install space
-  #- catkin config --install
-  # Build [and Install] packages
-  - catkin build --limit-status-rate 0.1 --no-notify -DCMAKE_BUILD_TYPE=Release
-  # Build tests
-  - catkin build --limit-status-rate 0.1 --no-notify --make-args tests
-  # Run tests
-  - catkin run_tests
+  # get summary of test results
+  - /tmp/catkin/bin/catkin_test_results $JOB_PATH/catkin_workspace/test_results --all
+notifications:
+  email: false
