Added new IMarker Robot control method Cleaned up code base: catkin lint, roslint

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(moveit_visual_tools)
 
-# C++ 11
-set(CMAKE_CXX_FLAGS "-std=c++11 -Wall ${CMAKE_CXX_FLAGS}")
+# C++ 11 required for OMPL
+add_compile_options(-std=c++11)
 
 # Load catkin and all dependencies required for this package
 find_package(catkin REQUIRED COMPONENTS
@@ -40,9 +40,6 @@ catkin_package(
   INCLUDE_DIRS include
 )
 
-# Enable gdb to show line numbers
-#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -g -W -Wno-unused-parameter -fno-strict-aliasing")
-
 ## Build
 include_directories(SYSTEM ${EIGEN3_INCLUDE_DIRS})
 
@@ -54,6 +51,7 @@ include_directories(
 # Visualization Tools Library
 add_library(${PROJECT_NAME}
   src/${PROJECT_NAME}.cpp
+  src/imarker_robot_state.cpp
 )
 add_dependencies(${PROJECT_NAME} graph_msgs_generate_messages_cpp)
 target_link_libraries(${PROJECT_NAME}
