Ability to use two end effectors for interactive markers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,7 @@ include_directories(
 add_library(${PROJECT_NAME}
   src/${PROJECT_NAME}.cpp
   src/imarker_robot_state.cpp
+  src/imarker_end_effector.cpp
 )
 add_dependencies(${PROJECT_NAME} graph_msgs_generate_messages_cpp)
 target_link_libraries(${PROJECT_NAME}
