--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-# This config file for Travis CI utilizes https://github.com/davetcoleman/moveit_ci/ package.
+# This config file for Travis CI utilizes https://github.com/ros-planning/moveit_ci/ package.
 sudo: required
 dist: trusty
 services:
@@ -12,11 +12,11 @@ notifications:
       - dave@dav.ee
 env:
   matrix:
-    - ROS_DISTRO="kinetic"  ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu              UPSTREAM_WORKSPACE=.travis.rosinstall
-    - ROS_DISTRO="kinetic"  ROS_REPOSITORY_PATH=http://packages.ros.org/ros-shadow-fixed/ubuntu UPSTREAM_WORKSPACE=.travis.rosinstall
+    - ROS_DISTRO=kinetic  ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu              UPSTREAM_WORKSPACE=.travis.rosinstall
+    - ROS_DISTRO=kinetic  ROS_REPOSITORY_PATH=http://packages.ros.org/ros-shadow-fixed/ubuntu UPSTREAM_WORKSPACE=.travis.rosinstall
 matrix:
   allow_failures:
-    - env: ROS_DISTRO="kinetic" ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu          UPSTREAM_WORKSPACE=.travis.rosinstall
+    - env: ROS_DISTRO=kinetic ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu          UPSTREAM_WORKSPACE=.travis.rosinstall
 before_script:
   - git clone -q https://github.com/davetcoleman/moveit_ci.git .moveit_ci
 script:
