--- a/package.xml
+++ b/package.xml
@@ -17,12 +17,12 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <depend>rviz_visual_tools</depend>
-  <depend>eigen_conversions</depend>
+  <depend>tf2_eigen</depend>
   <depend>geometry_msgs</depend>
   <depend>moveit_ros_robot_interaction</depend>
   <depend>moveit_core</depend>
   <depend>roscpp</depend>
-  <depend>tf_conversions</depend>
+  <depend>tf2_ros</depend>
   <depend>visualization_msgs</depend>
   <depend>graph_msgs</depend>
   <depend>std_msgs</depend>
