add missing dependency interactive_markers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ find_package(catkin REQUIRED COMPONENTS
   trajectory_msgs
   cmake_modules
   roslint
+  interactive_markers
 )
 
 find_package(Eigen3 REQUIRED)
