--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,13 @@ cache: ccache
 env:
   global:
     - ROS_DISTRO=noetic
+    - ROS_REPO=ros-testing
     - CXXFLAGS="-Wall -Wextra -Wwrite-strings -Wunreachable-code -Wpointer-arith -Wredundant-decls"
     - WARNINGS_OK=false
   matrix:
     - TEST="clang-format catkin_lint"
     - TEST=clang-tidy-fix
-    - DOCKER_IMAGE=moveit/moveit:master-source
+    - DOCKER_IMAGE=moveit/moveit:master-source ROS_REPO=
 
 before_script:
   - git clone -q --depth=1 https://github.com/ros-planning/moveit_ci.git .moveit_ci
