--- a/package.xml
+++ b/package.xml
@@ -9,7 +9,7 @@
   <license>BSD</license>
 
   <url type="website">https://github.com/ros-planning/moveit_visual_tools</url>
-  <url type="butracker">https://github.com/ros-planning/moveit_visual_tools/issues</url>
+  <url type="bugtracker">https://github.com/ros-planning/moveit_visual_tools/issues</url>
   <url type="repository">https://github.com/ros-planning/moveit_visual_tools/</url>
 
   <author email="dave@picknik.ai">Dave Coleman</author>
