--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,7 +117,7 @@ install(DIRECTORY launch resources DESTINATION share/${PROJECT_NAME})
 
 # Install executables
 install(TARGETS ${PROJECT_NAME}_demo
-  RUNTIME DESTINATION bin
+  RUNTIME DESTINATION lib/${PROJECT_NAME}
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib
 )
