--- a/package.xml
+++ b/package.xml
@@ -16,17 +16,18 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <depend>rviz_visual_tools</depend>
-  <depend>tf2_eigen</depend>
   <depend>geometry_msgs</depend>
-  <depend>moveit_ros_planning</depend>
-  <depend>moveit_core</depend>
-  <depend>rclcpp</depend>
-  <depend>tf2_ros</depend>
-  <depend>visualization_msgs</depend>
   <depend>graph_msgs</depend>
+  <depend>moveit_common</depend>
+  <depend>moveit_core</depend>
+  <depend>moveit_ros_planning</depend>
+  <depend>rclcpp</depend>
+  <depend>rviz_visual_tools</depend>
   <depend>std_msgs</depend>
+  <depend>tf2_eigen</depend>
+  <depend>tf2_ros</depend>
   <depend>trajectory_msgs</depend>
+  <depend>visualization_msgs</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
